fix footer overlapping score

--- a/public/css/transcription.css
+++ b/public/css/transcription.css
@@ -47,6 +47,10 @@ input[type="number"] {
   animation: highlight 4s;
 }
 
+#score-view{
+  margin-bottom: 4rem;
+}
+
 tei-ref a, tei-ref a:hover {
   color: initial;
   text-decoration: none;
